# pl-experiments

./: .gitignore  LICENSE.md  Makefile  Readme.md  affe.opam  affe.opam.locked  dune  dune-project
affe/: affe_lang.ml  dune  index.html  instantiate.ml  lexer.mll  multiplicity.ml  parser.mly  printer.ml  region.ml  style.css  syntax.ml  transl.ml  typing.ml
affe/examples/: #sudoku.affe#  btree.affe  intro.affe
affe/mode/affe/: affe.js
affe/theme/: solarized.css
common/: dune  zoo.ml  zoo.mli
examples/: array.affe  array.affe.expected  basics.affe  constructors.affe.expected  cow.affe.expected  dune  fail.affe  nonlexical.affe.expected  patmatch.affe  patmatch.affe.expected  pool.affe.expected  region.affe  sessions.affe  test_un.affe
lang/affe/: affe.ml  affe_lang.ml  affe_www.ml  builtin.ml  constraint.ml  dune  env.ml  instantiate.ml  instantiate.mli  kinds.ml  lattice_solver.ml  lexer.mll  multiplicity.ml  name.ml  parser.mly  printer.ml  region.ml  syntax.ml  transl.ml  types.ml  typing.ml  variance.ml
lang/affe/examples/: basics.affe.expected  builtins.affe  channel.affe  channel.affe.expected  container.affe  cow.affe  cow.lin  dune  example.affe  example.affe.expected  fail.affe.expected  nonlexical.affe  pool.affe  region.affe  region.affe.expected  sessions.affe  sessions.affe.expected  sudoku.affe  sudoku.affe.expected  test_un.affe.expected
lang/hm/: dune  syntax.ml
lang/lin/: builtin.ml  constraint.ml  dune  eval.ml  lexer.mll  lin.ml  name.ml  parser.mly  printer.ml  syntax.ml  test_un.lin  transl.ml  types.ml  typing.ml  variance.ml
lang/lin/examples/: constructors.lin
www/: script.js
www/examples/: channel.affe  intro.affe  sessions.affe  sudoku.affe
www/mode/affe/: affe.js
zoo/: dune  zoo.mli
zoo/native/: dune  zoo.ml
zoo/web/: dune  zoo.ml  zoo_web.ml
