(ocamllex lexer)
(menhir
  (modules parser)
  (flags --explain --strict)
)

(library
  (name affe)
  (libraries ocamlgraph iter zoo)
  (modules :standard \ Affe Eval)
  (preprocess (pps ppx_deriving.std))
  (wrapped false)
)

(executable
  (name affe)
  (public_name affe)
  (modules Affe)
  (libraries affe zoo_native)
)
