(ocamllex lexer)
(menhir
  (modules parser)
  (flags --explain --strict)
)

(library
  (name affe)
  (libraries ocamlgraph sequence zoo)
  (modules :standard \ Affe Affe_www Eval)
  (preprocess (pps ppx_deriving.std))
  (wrapped false)
)

(executable
  (name affe)
  (modules Affe)
  (libraries affe zoo_native)
)
(executable
  (name affe_www)
  (modules Affe_www)
  (libraries affe zoo_web)
  (js_of_ocaml)
)

(alias
 (name   runtest)
 (action (run ./affe.exe %{deps}))
 (deps (glob_files "examples/*.affe"))
)